--- a/web/styles.css
+++ b/web/styles.css
@@ -8,7 +8,7 @@
 
 .navbar {
     padding-top: 7px;
-    padding-bottom: 7px;
+    padding-bottom: 10px;
 }
 
 .navbar-brand {
@@ -17,6 +17,7 @@
     text-align: center;
     margin-left: 25px;
     margin-right: 25px;
+    padding-bottom: 1px;
 }
 
 .nav-item .dropdown, ul .navbar-nav {
@@ -43,30 +44,34 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     font-weight: 600;
+    text-align: center;
     color: #666;
     margin-bottom: 0px;
 }
 
 #machine-button {
-    width: 90px;
+    width: 100px;
     white-space: normal;
     word-wrap: break-word;
 }
 
 button.button-level1 {
+    margin-top: 1px;
     margin-bottom: 2px;
 }
 
 button.button-level2 {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+button.button-level3 {
     margin-top: 1px;
     margin-bottom: 2px;
 }
 
 .dropdown-toggle {
-    margin: 0px;
     padding: 0px;
-    border: 0px;
-    text-align: left;
     cursor: default;
 }
 
@@ -104,10 +109,9 @@ button.button-level2 {
 }
 
 #plugboardtext {
-    margin-top: 6px;
-    margin-left: 1px;
+    margin-top: 1px;
     max-width: 200px;
-    height: 68px;
+    height: 69px;
 }
 
 .form-control:focus {
@@ -117,7 +121,7 @@ button.button-level2 {
 #encrypt {
     margin-left: 25px;
     margin-right: 25px;
-    padding-bottom: 3px;
+    padding-bottom: 5px;
 }
 
 #checkboxes {
