--- a/web/styles.css
+++ b/web/styles.css
@@ -12,12 +12,15 @@
 }
 
 .navbar-brand {
-    font-family: "Goldman", sans-serif;
-    font-weight: 400;
     text-align: center;
     margin-left: 25px;
     margin-right: 25px;
-    padding-bottom: 1px;
+    padding-top: 3px;
+    padding-bottom: 0px;
+}
+
+#logo {
+    width: 100px;
 }
 
 .nav-item .dropdown, ul .navbar-nav {
@@ -139,8 +142,6 @@ button.button-level3 {
 }
 
 #encrypt-button {
-    font-family: "Goldman", sans-serif;
-    font-weight: 400;
     color: #fff;
     width: 100%;
     height: 40px;
